# pharos-agent-treasury-guardrail

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/: three-day-plan.md
examples/: agent_demo.py  demo_scenario.json
references/: treasury-guardrail.md
src/treasury_guardrail/: __init__.py  cli.py  skill.py  types.py
tests/: test_skill.py
